k8s/node-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dog-images-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dog-images-app
  template:
    metadata:
      labels:
        app: dog-images-app
    spec:
      containers:
      - name: dog-images-app
        image: imzainazm/nodeapp
        ports:
        - containerPort: 3000
