k8s/node-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dog-images-app
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30022
  selector:
    app: dog-images-app
